[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name        = "cd-bot"
version     = "1.0.0"
description = "A general purpose music bot."
authors     = ["Aaron Hennessey <axelancerr@gmail.com>"]

[tool.poetry.dependencies]
python            = "~3.11.0"
aiohttp           = { version = "~3.8.0"  }
async-timeout     = { version = "~4.0.0"  }
asyncpg           = { version = "~0.27.0" }
asyncpg-stubs     = { version = "~0.27.0" }
colorama          = { version = "~0.4.0"  }
dacite            = { version = "~1.8.0"  }
discord-py        = { version = "~2.2.0", extras = ["speed", "voice"] }
humanize          = { version = "~4.6.0"  }
jishaku           = { version = "~2.5.0", extras = ["procinfo"] }
mystbin-py        = { version = "~5.1.0"  }
orjson            = { version = "~3.8.0"  }
pendulum          = { version = "~2.1.0"  }
rapidfuzz         = { version = "~3.0.0"  }
redis             = { version = "~4.5.0", extras = ["hiredis"] }
toml              = { version = "~0.10.0" }
typing-extensions = { version = "~4.6.0"  }

discord-ext-lava       = { path = "../discord-ext-lava" }
discord-ext-paginators = { path = "../discord-ext-paginators" }

[tool.pyright]
include                = ["cd", "launcher.py"]
pythonVersion          = "3.11"
typeCheckingMode       = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage      = false
reportUnknownMemberType = false
reportImportCycles      = false